# clientctl

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  apps.example.yml  cloudflared.example.yml  config.py  pyproject.toml  requirements.txt  server.py  start.sh  themes.example.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml  security.yml  test.yml
core/: __init__.py  audio.py  cachy.py  displays.py  intel_gpu.py  kwin.py  notifications.py  procs.py  realtime.py  system.py  themes.py
docs/releases/: README.md  v0.1.0.md
examples/: README.md  clientctl-tunnel.service  clientctl.desktop  clientctl.service
routes/: __init__.py  apps.py  audio.py  auth.py  cachy.py  displays.py  system.py
static/: app.js  error.html  index.html  manifest.webmanifest  style.css  sw.js  theme-bootstrap.js
tests/: conftest.py  test_auth.py  test_caps.py  test_config.py  test_encoding.py  test_html_structure.py  test_intel_gpu.py  test_kwin.py  test_notifications.py  test_procs.py  test_realtime.py  test_routes_apps.py  test_security.py  test_smoke.py  test_themes.py
utils/: __init__.py  auth.py  caps.py  encoding.py  ratelimit.py  shell.py
