[project]
name            = "clientctl"
version         = "0.1.0"     # Single source of truth: config.VERSION (CI verifies match)
description     = "Web-based control panel for a Linux client (KDE Plasma 6 / multi-distro)"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
addopts       = "-q --strict-markers --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:webauthn.*",
]

[tool.coverage.run]
source = ["config", "core", "routes", "utils"]
omit   = [
    "*/__init__.py",
    "tests/*",
]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.bandit]
# CI runs on these paths only — tests use assert/subprocess legitimately.
exclude_dirs = ["tests", ".venv", "examples"]
# B101 (assert)         — fine in tests, won't be reached anyway thanks to exclude_dirs
# B404 (subprocess imp) — clientctl is a system control panel, subprocess is the tool
# B603 (subprocess no-shell) — we always use list-form, no shell=True
# B607 (partial path)   — system tools (busctl, qdbus6, …) are intentionally invoked by name
skips = ["B101", "B404", "B603", "B607"]
